implemented backend for user audit logs
